Fix custom donation amount wrapping on a large screen

--- a/site/css/donate.scss
+++ b/site/css/donate.scss
@@ -51,8 +51,11 @@
 
     .donation-options {
         display: flex;
-        flex-wrap: wrap;
         gap: 8px;
+
+        @include sm-only {
+            flex-wrap: wrap;
+        }
     }
 
     .donation-options--grid {
